--- a/papers/Cr/bib.bib
+++ b/papers/Cr/bib.bib
@@ -144,3 +144,30 @@ year = {2010}
   year={2017},
   publisher={Ubiquity Press}
 }
+
+@article{mogensen2018optim,
+  author  = {Mogensen, Patrick Kofod and Riseth, Asbj{\o}rn Nilsen},
+  title   = {Optim: A mathematical optimization package for {Julia}},
+  journal = {Journal of Open Source Software},
+  year    = {2018},
+  volume  = {3},
+  number  = {24},
+  pages   = {615},
+  doi     = {10.21105/joss.00615}
+}
+
+@article{Nelder1965,
+abstract = {A method is descipted for minimization of a function of n variables, which depends on the comparison of function values at the (n+1) vertices of the general simplex, followed by the replacement of the vertex with the highest value by another point. The simplex adapts itself to the local landscape, and contracts on the final minimum. The method is shown to be effective and computationally compact. A procedure is given for the estimation of the hessian matrix on the neighbourhood of the minimum, needed in statistical estimation problems.},
+author = {Nelder, J. A. and Mead, R.},
+doi = {10.1093/comjnl/7.4.308},
+file = {:home/ponet/Downloads/comjnl{\_}7.4.308.pdf:pdf},
+issn = {0010-4620},
+journal = {The Computer Journal},
+mendeley-groups = {PhD Thesis/Cr},
+number = {4},
+pages = {308--313},
+title = {{A Simplex Method for Function Minimization}},
+volume = {7},
+year = {1965}
+}
+
