--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -204,10 +204,10 @@ Since the sign of $L$ does not matter for the position of the potential surface 
 The amount of periods depends on the cooling rate of $L$, and damping rate of $y$.
 The former influences how much $T_L$ can cool back down within one period and thus the size of the maximum kinetic energy gain of $y$, while the latter is the main source of kinetic energy loss.From our simulations, unless the damping is really negligible, it is always best to supply a set of pulses at each oscillation period of $y$.
 The results in Fig.~\ref{fig:Cr_maximum_amp} showcase this situation, where the heat capacity of the bath was artificially increased to infinity to mimic a possible strong cooled regime which would be ideal for maximizing the oscillation amplitude.
-With the damping rate of $y$ taken as in the experiment, the maximal amplitude thus achieved is about 400\% the original value, quite a remarkable increase.  
+With the damping rate of $y$ taken as in the experiment, the maximal amplitude thus achieved is about 450\% the original value, quite a remarkable increase.  
 \begin{figure}
 	\IncludeGraphics{maximumamplitude.pdf}
-	\caption{\label{fig:Cr_maximum_amp} {\bf Two schemes for achieving maximum amplitude.} {\bf (a)} One set of pulses is applied within each period. {\bf (b)} One set of pulses every two periods. The damping is clearly the limiting factor and warrants as many pulses per timeframe in order to achieve the maximum amplitude.}
+	\caption{\label{fig:Cr_maximum_amp} {\bf Two schemes for achieving maximum amplitude.} {\bf (a)} One set of pulses is applied within each period. {\bf (b)} One set of pulses every two periods. The damping is clearly the limiting factor and warrants as many pulses per timeframe in order to achieve the maximum amplitude. In both figures, the envelope function is at 450\% the original magnitude.}
 \end{figure}
 
 We can go one step further, however, and design a pulse train such that the oscillation amplitude follows a particular ``signal'' envelope function, demonstrating the incredibly high degree of control of the PLD that this system allows for.  
@@ -232,7 +232,7 @@ This chapter has shown that the coupling between the SDW and PLD through magneto
 Moreover, the slower dynamics of the PLD compared to the SDW opens up new behavior and additional dynamic control that would not be possible without the coupling.
 If the PLD would have dynamics on the same timescale as the SDW, changing its potential through excitation of the latter would not be very impactful since it would follow the minimum of the potential as fast as the excited SDW would change it.
 
-As demonstrated by both the experiments and the theory, this allows for either increasing the oscillation amplitude dramatically (up to 400\% the original value), or destroy it at a moment's notice, allowing for a shortcut to adiabaticity where the final state is at higher temperature than the original one.
+As demonstrated by both the experiments and the theory, this allows for either increasing the oscillation amplitude dramatically (up to 450\% the original value), or destroy it at a moment's notice, allowing for a shortcut to adiabaticity where the final state is at higher temperature than the original one.
 
 Whether this can be exploited for technological means is probably a bit of a stretch, seen as XFELs are rather large. However, this understanding and demonstration of the perfect control of a couple order parameter could open the road to finding other similar situations with more technologically viable properties.   
 
